# commitalyzer

./: CHANGELOG.md  Cargo.toml  README.md  TESTCOMMIT  build.rs  post-build-release.sh
.cargo/: config.toml
.github/workflows/: release.yml  test.yml
.hooks/: commit-msg  pre-commit
rules/: conventional-commits.yml
rulesets/test/: test-ruleset-one.yml
src/: api.rs  args.rs  lib.rs  main.rs  models.rs  utils.rs
src/api/: analyze_rules.rs  load_rules.rs  parse_args.rs
src/models/: analyzer.rs  rule.rs
src/utils/: check.rs  get_path.rs  load_ruleset.rs
test/: test-ruleset-two.yml
tests/: integration_test.rs
tests/common/: mod.rs  test_commit.rs
tests/conventional_commits/: commit_body_footer_syntax.rs  commit_header.rs  commit_header_commit_type.rs  commit_header_scope.rs  commit_header_subject.rs  commit_header_syntax.rs  mod.rs
