[package]
name = "commitalyzer"
version = "0.2.3"
authors = ["Nicholas Raynes"]
description = "A very simple commit linter. Customizable via custom rule files."
license  = "MIT OR Apache-2.0"
edition = "2024"
repository = "https://github.com/nraynes/commitalyzer"
keywords = ["commit", "lint", "analyze", "project", "tools"]
categories = ["command-line-utilities", "development-tools"]
include = [
    "src/",
    "Cargo.toml",
    "LICENSES/",
    "LICENSE",
    "README.md",
    "CHANGELOG.md",
    "build.rs",
]

[dependencies]
clap = { version = "4.6.1", features = ["derive"] }
derive-getters = "0.5.0"
indexmap = { version = "2.14.0", features = ["serde"] }
regex = "1.12.3"
semver-common = "0.9.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
yaml_serde = "0.10.4"

[build-dependencies]
clap = { version = "4.6.1", features = ["derive"] }
clap_mangen = "0.3.0"

[dev-dependencies]
assert_cmd = "2.2.1"
assert_fs = "1.1.3"
predicates = "3.1.4"
